--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = t-vk/ESP32 BLE Keyboard@^0.3.0
+lib_deps = 
+	t-vk/ESP32 BLE Keyboard@^0.3.0
+	madhephaestus/ESP32Encoder@^0.5.1
