--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env:esp32]
 monitor_speed = 115200
 platform = espressif32
-board = esp32dev
+board = nodemcu-32s
 framework = arduino
 lib_deps = 
 	madhephaestus/ESP32Encoder@^0.5.1
